# model-training

./: .gitignore  .pymon  ACTIVITY.md  README.MD  README.md  config.json  dvc.yaml  phishing-detection-cnn.ipynb  pylintrc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  python_application.yml  release.yml
outputs/: model.h5  tokenizer.pkl
outputs/metrics/: metrics.json
src/: .pymon  config_reader.py  define_train_model.py  get_data.py  predict.py  tokenize_data.py  utils.py
test/integration_tests/: test_config_reader.py  test_define_train_model.py  test_get_data.py  test_predict.py
tests/: .pymon  test_data_slices.py  test_features_data.py  test_model.py  test_monitoring.py  test_mutamorphic.py  test_non_determinism.py
tests/infra_integration_tests/: test_define_train_model.py  test_get_data.py  test_predict.py
