[tool.poetry]
name = "dependency-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.4"
keras = "^3.3.3"
scikit-learn = "^1.4.2"
python-dotenv = "^1.0.1"
dvc = "^3.50.1"
pylint = "^3.1.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
