[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.3"
keras = "^2.12.0"
scikit-learn = "^1.3.2"
python-dotenv = "^1.0.1"
dvc = "^2.18.0"
pylint = "^2.13"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

